final-after-kevin

--- a/src/css/NavbarLogin.css
+++ b/src/css/NavbarLogin.css
@@ -1,4 +1,4 @@
-* {
+/* * {
   box-sizing: border-box;
 }
 
@@ -7,7 +7,7 @@ html, body {
   padding: 0;
   width: 100%;
   overflow-x: hidden;
-}
+} */
 
 .navbarl {
   display: flex;
